--- a/src/explore.es.ipynb
+++ b/src/explore.es.ipynb
@@ -31,7 +31,9 @@
     "\n",
     "connection_string = f\"postgresql://{os.getenv('DB_USER')}:{os.getenv('DB_PASSWORD')}@{os.getenv('DB_HOST')}/{os.getenv('DB_NAME')}\"\n",
     "engine = create_engine(connection_string).execution_options(autocommit=True)\n",
-    "engine.connect()\n",
+    "engine.connect(\n",
+    "    \n",
+    ")\n",
     "\n",
     "# dataframe = pd.read_sql(\"Select * from books;\", engine)\n",
     "# print(dataframe.describe())"
